--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,15 +13,16 @@
         <!-- Stylesheets -->
         {% block stylesheets %}
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
         {% endblock %}
     </head>
-    <body class="d-flex flex-column">
+    <body class="d-flex flex-column bg-light">
         <header>
-            <div class="container my-3">
+            <div class="container py-3">
                 <h3 class="header-logo">
-                    <a href="#" title="Retour à l'accueil" class="text-decoration-none text-dark">
-                        <img src="{{ asset('img/LogoS.com.png') }}" alt="Sortir.com" class="me-2" style="max-height: 70px;">
-                        <span class="align-middle">
+                    <a href="{{ path('app_home') }}" title="Retour à l'accueil" class="text-decoration-none text-dark d-flex align-items-center">
+                        <img src="{{ asset('img/LogoS.com.png') }}" alt="Sortir.com" class="me-3" style="max-height: 50px;">
+                        <span class="align-middle fs-4 fw-bold">
                             Sortir.com
                         </span>
                     </a>
@@ -44,18 +45,14 @@
                 {% block body %}{% endblock %}
             </div>
         </main>
-        <footer class="bg-light py-3">
+        <footer class="bg-light py-3 border-top">
             <div class="container text-center">
-                &copy; Sortir.com
-                {{ "now" | date("Y") }}
-                - Tous droits réservés.
+                &copy; Sortir.com {{ "now" | date("Y") }} - Tous droits réservés.
             </div>
         </footer>
         <!-- JavaScript -->
         {% block javascripts %}
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         {% endblock %}
     </body>
 </html>
-
