--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -38,16 +38,27 @@
                         </a>
                     </li>
                 {% else %}
+                    {% if is_granted('ROLE_ADMIN') %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Admin</a>
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les sorties</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{{ path('admin_sortir_create') }}">Créer une sortie</a></li>
                             <li><a class="dropdown-item" href="{{ path('admin_sortir_index') }}">Liste des sorties</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Créer un participant</a></li>
-                            <li><a class="dropdown-item" href="#">Liste des participants</a></li>
+                            {# <li><a class="dropdown-item" href="#">Créer un participant</a></li>
+                            <li><a class="dropdown-item" href="#">Liste des participants</a></li> #}
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les paricipants</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Créer un participant</a></li>
+                            <li><a class="dropdown-item" href="#">Liste des participants</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                           
+                        </ul>
+                    </li>
+                    {% else %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Users</a>
                         <ul class="dropdown-menu">
@@ -55,6 +66,7 @@
                             <li><a class="dropdown-item" href="{{ path('app_all_sorties') }}">Liste des sorties</a></li>
                         </ul>
                     </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="btn btn-danger text-white ms-2" href="{{ path('app_logout') }}" title="Se déconnecter">
                             Se déconnecter
