add gestions des sites

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -55,7 +55,16 @@
                             <li><a class="dropdown-item" href="#">Créer un participant</a></li>
                             <li><a class="dropdown-item" href="#">Liste des participants</a></li>
                             <li><hr class="dropdown-divider"></li>
-                           
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les sites</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{{path('app_admin_add_site')}}">Créer un site</a></li>
+                            <li><a class="dropdown-item" href="{{ path('app_admin_all_site')}}">Liste des site</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Créer un lieu</a></li>
+                            <li><a class="dropdown-item" href="#">Liste des lieux</a></li>
                         </ul>
                     </li>
                     {% else %}
