add cancel sortie and controle date

--- a/templates/sortir/all_sorties.html.twig
+++ b/templates/sortir/all_sorties.html.twig
@@ -54,50 +54,7 @@
                                 <a href="#" class="btn btn-warning btn-sm mb-2">Modifier</a>
                                 <a href="{{ path('app_sortir_delete', {id: sortie.id}) }}" class="btn btn-danger btn-sm mb-2">Supprimer</a>
                                 {% if sortie.etat != 'Annulée' %}
-                                    <button class="btn btn-danger btn-sm" 
-                                            data-bs-toggle="modal" 
-                                            data-bs-target="#cancelModal-{{ sortie.id }}"
-                                            data-id="{{ sortie.id }}">
-                                        Annuler
-                                    </button>
-
-                                    <!-- Button trigger modal -->
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                                    Launch static backdrop modal
-                                    </button>
-
-                                    <!-- Modal -->
-                                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            ...
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Understood</button>
-                                        </div>
-                                        </div>
-                                    </div>
-                                    </div>
-                                    <!-- Modal -->
-                                    {# <div class="modal fade" id="cancelModal-{{ sortie.id }}" tabindex="-1" aria-labelledby="cancelModalLabel-{{ sortie.id }}" aria-hidden="true">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content" id="cancel-modal-content-{{ sortie.id }}">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title" id="cancelModalLabel-{{ sortie.id }}">Annuler la sortie</h5>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <p>Chargement...</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div> #}
+                                    <a href="{{ path('app_sortir_cancel', {id: sortie.id}) }}" class="btn btn-danger btn-sm mb-2">Annuler</a>
                                 {% endif %}
                             {% endif %}
                         </div>
@@ -117,7 +74,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {# <script>
+    <script>
         document.addEventListener('DOMContentLoaded', () => {
             document.querySelectorAll('[data-bs-toggle="modal"]').forEach(button => {
                 button.addEventListener('click', (event) => {
@@ -158,5 +115,5 @@
                 });
             });
         });
-    </script> #}
+    </script>
 {% endblock %}
