--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -69,10 +69,17 @@
                     </li>
                     {% else %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Users</a>
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les sorties</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{{ path('app_sortie_create') }}">Créer une sortie</a></li>
                             <li><a class="dropdown-item" href="{{ path('app_all_sorties') }}">Liste des sorties</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les sites</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Créer un lieu</a></li>
+                            <li><a class="dropdown-item" href="#">Liste des lieux</a></li>
                         </ul>
                     </li>
                     {% endif %}
