--- a/templates/sortir/cancel_form.html.twig
+++ b/templates/sortir/cancel_form.html.twig
@@ -29,7 +29,7 @@
         </div>
 
         <div class="d-flex justify-content-between">
-            <button type="submit" class="btn btn-primary">Enregistrer</button>
+            <button type="submit" class="btn btn-danger">Confirmer</button>
             <a href="{{ path('app_all_sorties') }}" class="btn btn-secondary">Annuler</a>
         </div>
         {{ form_end(form) }}
